--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 html, body {
-   height: 100%;
-   overflow:hidden;
+    height: 100%;
+    overflow:hidden;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
     }
 
     /*.basemapThumb {*/
-        /*display: none;*/
+    /*display: none;*/
     /*}*/
 }
 
@@ -41,6 +41,29 @@ body {
     padding:2px;
 }
 
+.hover-content {
+    display:none;
+}
+
+.latLngScale {
+    position:absolute;
+    padding:4px;
+    bottom:1em;
+    right:50%;
+    /*width:250px*/
+    /*height:320px;*/
+    z-index:1;
+    color: black;
+    background-color: rgb(255,255,255);
+    background-color: rgba(255,255,255,0.8);
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    border-radius: 4px;
+}
+
+.latLngScale:hover .hover-content {
+    display:inline-block;
+}
+
 .legend {
     position:absolute;
     padding:4px;
@@ -53,6 +76,7 @@ body {
     background-color: rgb(255,255,255);
     background-color: rgba(255,255,255,0.8);
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    min-width: 200px;
     border-radius: 4px;
 }
 
@@ -119,5 +143,3 @@ body {
 input[type="checkbox"], input[type="radio"] {
     float: left;
 }
-
-
