--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,10 @@ body {
     background-color:#474747;
 }
 
+.keepit100 {
+    height: 100%;
+}
+
 @media (max-width: 767px) {
     #geosearchButtonText {
         display: none;
@@ -24,6 +28,10 @@ body {
     /*.basemapThumb {*/
     /*display: none;*/
     /*}*/
+}
+
+.overflow-y-hidden {
+    overflow-y: hidden;
 }
 
 @media (min-width: 768px) {
@@ -193,6 +201,7 @@ body {
 
 #sidebar {
     top: 50px;
+    padding-bottom: 50px;
 }
 input[type="checkbox"], input[type="radio"] {
     float: left;
