--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,6 +157,19 @@ body {
     max-height: 100%;
 }
 
+.opacitySlider {
+    position: absolute;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    /*padding-bottom: 40px;*/
+    opacity: 0.8;
+    border: solid 1px white;
+    background-color: black;
+    z-index: 1000;
+    border-radius: 5px;
+}
+
 .modal-dialog {
     padding-top: 60px;
 }
